# mars-exploration

./: .gitignore  README.md  crewai_flow.html  pyproject.toml  requirements.txt
src/mars_exploration/: integration_test.py  main.py
src/mars_exploration/commons/: embeddings.py  llm.py
src/mars_exploration/crews/drone_crew/: drone_crew.py
src/mars_exploration/crews/drone_crew/config/: agents.yaml  tasks.yaml
src/mars_exploration/crews/integration_crew/: integration_crew.py
src/mars_exploration/crews/integration_crew/config/: agents.yaml  tasks.yaml
src/mars_exploration/crews/mission_crew/: mission_crew.py
src/mars_exploration/crews/mission_crew/config/: agents.yaml  tasks.yaml
src/mars_exploration/crews/rover_crew/: rover_crew.py
src/mars_exploration/crews/rover_crew/config/: agents.yaml  tasks.yaml
src/mars_exploration/data/input/: mars_terrain.graphml  mission_report.md  rovers.json
src/mars_exploration/data/output/: final_mission_plan.md
src/mars_exploration/data_test_case_1/output/: final_mission_plan.md  integrate_mission_plans.md
src/mars_exploration/data_test_case_2/input/: mars_terrain.graphml  mission_report.md  rovers.json
src/mars_exploration/data_test_case_2/output/: final_mission_plan.md
src/mars_exploration/data_test_case_3/input/: drones.json  mars_terrain.graphml  mission_report.md
src/mars_exploration/models/: drone_models.py  mission_spec.py  rover_models.py
src/mars_exploration/tools/: common_tools.py  drone_path_tool.py  rover_path_tool.py  rover_route_tool.py  rover_selector_tool.py  shortest_path_tool.py
(+8 files in other folders)
