[project]
name = "mars_exploration"
version = "0.1.0"
description = "mars_exploration using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0",
]

[project.scripts]
kickoff = "mars_exploration.main:kickoff"
run_crew = "mars_exploration.main:kickoff"
plot = "mars_exploration.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
